# ducklake_oob_writer

./: README.md  pyproject.toml
docs/: DuckLake OOB Writer.md  Temporal and Partitioning Design.md
examples/: 01_quickstart.py  02_source_time_travel.py  03_late_arriving_backfill.py  04_merge_on_read.py  05_maintenance.py  06_postgres_catalog.py  07_concurrent_reader.py  08_concurrent_writers.py  README.md  _common.py
src/ducklake_oob_writer/: __init__.py  canonicalize.py  catalog.py  incorporation.py  inlined.py  maintenance.py  parquet.py  replica.py  snapshot_index.py  writer.py
tests/: test_canonicalize.py  test_canonicalize_mapping.py  test_delete.py  test_heterogeneous.py  test_history_replica.py  test_incorporation.py  test_inline.py  test_native_compaction.py  test_partitioning.py  test_reject_out_of_order.py  test_replica.py  test_s3.py  test_schema_drift.py  test_schema_evolution.py  test_virtual.py
